--- a/kitkat.html
+++ b/kitkat.html
@@ -17,15 +17,15 @@
          <div class="col3">
         <span style="color: red;">Kit Kat Chocolatory</span><br>
         Packaging Design
-        <div class="arrow"><a href="file:///Users/kevin/Desktop/website/works.html"><img src="arrow.jpg"></a></div>
+        <div class="arrow"><a href="works.html"><img src="arrow.jpg"></a></div>
       </div>
 		  </div>	
     <header>  
 		  <div class="col1">
 		    <nav>
-				  <a href="file:///Users/kevin/Desktop/website/home.html">Home</a><br>
-				  <a href="file:///Users/kevin/Desktop/website/works.html">Selected Works</a><br>
-				  <a href="file:///Users/kevin/Desktop/website/about.html">About Him</a><br>
+				  <a href="home.html">Home</a><br>
+				  <a href="works.html">Selected Works</a><br>
+				  <a href="about.html">About Him</a><br>
 		    </nav>
 		  </div>
 		  <div class="col2">
