--- a/works.html
+++ b/works.html
@@ -18,9 +18,9 @@
 		<header>	
 		<div class="col1">
 		<nav>
-				<a href="file:///Users/kevin/Desktop/website/home.html">Home</a><br>
-				<a href="file:///Users/kevin/Desktop/website/works.html">Selected Works</a><br>
-				<a href="file:///Users/kevin/Desktop/website/about.html">About Him</a><br>
+				<a href="home.html">Home</a><br>
+				<a href="works.html">Selected Works</a><br>
+				<a href="about.html">About Him</a><br>
 		</nav>
 		</div>
 		<div class="col2">
@@ -34,9 +34,9 @@
 			</header>
 			<div class="row">
 				<div class="col-sm-4">
-					<a href="file:///Users/kevin/Desktop/website/kitkat.html">
+					<a href="kitkat.html">
 					<div class="info">
-					<img src="file:///Users/kevin/Desktop/website/images/zigzag.jpg">
+					<img src="images/zigzag.jpg">
 					<p>Kit Kat Chocolatory</p>
 					</div>
 					<img src="thumbs/img.jpg" width="100%">
@@ -45,15 +45,15 @@
 
 				<div class="col-sm-4">
 					<div class="info">
-					<img src="file:///Users/kevin/Desktop/website/images/zigzag.jpg">
+					<img src="zigzag.jpg">
 					<p>Crimes of Violence</p>
 					</div>
-					<img src="thumbs/img2.jpg" width="100%">
+					<img src="images/img2.jpg" width="100%">
 				</div>
 
 				<div class="col-sm-4">
 					<div class="info">
-					<img src="file:///Users/kevin/Desktop/website/images/zigzag.jpg">
+					<img src="images/zigzag.jpg">
 					<p>DLux Media Arts</p>
 					</div>
 					<img src="thumbs/img3.jpg" width="100%">
@@ -63,7 +63,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="info">
-					<img src="file:///Users/kevin/Desktop/website/images/zigzag.jpg">
+					<img src="images/zigzag.jpg">
 					<p>PUNK: DIY Typography</p>
 					</div>
 					<img src="thumbs/img4.jpg" width="100%">
@@ -71,7 +71,7 @@
 				
 				<div class="col-sm-4">
 					<div class="info">
-					<img src="file:///Users/kevin/Desktop/website/images/zigzag.jpg">
+					<img src="images/zigzag.jpg">
 					<p>Season's Greetings</p>
 					</div>
 					<img src="thumbs/img5.jpg" width="100%">
@@ -79,7 +79,7 @@
 				
 				<div class="col-sm-4">
 					<div class="info">
-					<img src="file:///Users/kevin/Desktop/website/images/zigzag.jpg">
+					<img src="images/zigzag.jpg">
 					<p>Miscellaneous</p>
 					</div>
 					<img src="thumbs/img6.jpg" width="100%">
