--- a/works.html
+++ b/works.html
@@ -18,7 +18,7 @@
 		<header>	
 		<div class="col1">
 		<nav>
-				<a href="home.html">Home</a><br>
+				<a href="index.html">Home</a><br>
 				<a href="works.html">Selected Works</a><br>
 				<a href="about.html">About Him</a><br>
 		</nav>
