--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 				<a href="http://linkedin.com">Linkedin</a> + <a href="http://linkedin.com">Instagram</a>
 		  </div>
 		  <div class="wide">
-			 <h1>Drop an e-mail and say hello! I look forward to collaborate with you. If you’d like a copy of my resumé, you can click here, or here if you want my PDF portfolio.</h1>
+			 <h1>Drop an e-mail and say hello! I look forward to collaborate with you. If you’d like a copy of my resumé, you can click <a href="resume.pdf">here</a>, or <a href="portfolio.pdf">here</a> if you want my PDF portfolio.</h1>
 		  </div>
     </header>
   <br>
