--- a/works.html
+++ b/works.html
@@ -45,10 +45,10 @@
 
 				<div class="col-sm-4">
 					<div class="info">
-					<img src="zigzag.jpg">
+					<img src="images/zigzag.jpg">
 					<p>Crimes of Violence</p>
 					</div>
-					<img src="images/img2.jpg" width="100%">
+					<img src="thumbs/img2.jpg" width="100%">
 				</div>
 
 				<div class="col-sm-4">
