--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
     <header>  
 		  <div class="col1">
 		    <nav>
-				  <a href="file:///Users/kevin/Desktop/website/index.html">Home</a><br>
-				  <a href="file:///Users/kevin/Desktop/website/works.html">Selected Works</a><br>
-				  <a href="file:///Users/kevin/Desktop/website/about.html">About Him</a><br>
+				  <a href="index.html">Home</a><br>
+				  <a href="works.html">Selected Works</a><br>
+				  <a href="about.html">About Him</a><br>
 		    </nav>
 		  </div>
 		  <div class="col2">
