--- a/kitkat.html
+++ b/kitkat.html
@@ -17,7 +17,7 @@
          <div class="col3">
         <span style="color: red;">Kit Kat Chocolatory</span><br>
         Packaging Design
-        <div class="arrow"><a href="works.html"><img src="arrow.jpg"></a></div>
+        <div class="arrow"><a href="works.html"><img src="arrow.jpg" width="70%"></a></div>
       </div>
 		  </div>	
     <header>  
